<resources>
    <string name="app_name">App Assessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="name_text">Name</string>
    <string name="address_text">Address</string>
    <string name="email_text">Email</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="password_text">Password</string>
    <string name="location_text">Location</string>
    <string name="api_key">AIzaSyC7Cht2WdNZh2bd9cDYg7lX7M9tVbn3XBc</string>
</resources>