<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="16dp"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/background_dark"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true"
            app:layout_goneMarginBottom="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/text_sign_in">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:inputType="textShortMessage"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/name">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="3"
                android:inputType="text"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/address">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:inputType="textShortMessage"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:inputType="phone"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/phone_number">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:inputType="textPassword"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorEnabled="true"
            app:layout_goneMarginBottom="16dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_text"
                android:textColor="@android:color/background_dark"
                android:maxLines="1"
                android:inputType="textShortMessage"
                android:focusable="false"
                app:hintTextColor="@android:color/darker_gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="18dp"
            android:text="@string/sign_up_text"
            android:enabled="false"
            app:cornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/location"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
